pievienoju formatesana.css

--- a/11klase.html
+++ b/11klase.html
@@ -8,5 +8,86 @@
 </head>
 <body>
     <h1 class="virsraksts">11.a Klase</h1>
+    <body style="background-color:rgba(11,12,16,255);"></body>
+    
+    <table>
+        <tr>
+          <th>Nr.p.k.</th>
+          <th>Vārds, uzvārds</th>
+        </tr>
+        <tr>
+            <td>1.</td>
+          <td>Baltmane Katrina</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+          <td>Butkis Bruno</td>
+        </tr>
+        <tr>
+            <td>3.</td>
+          <td>Dumbra-Dumbrovska Dagmāra</td>
+        </tr>
+        <tr>
+            <td>4.</td>
+          <td>Grincuna Eva Evita</td>
+        </tr>
+        <tr>
+            <td>5.</td>
+          <td>Karpenko Kristiāns</td>
+        </tr>
+        <tr>
+            <td>6.</td>
+          <td>Kozinda Amanda</td>
+        </tr>
+        <tr>
+            <td>7.</td>
+          <td>Kriškāne Elīna</td>
+        </tr>
+        <tr>
+            <td>8.</td>
+          <td>Kriškijāns Andris</td>
+        </tr>
+        <tr>
+            <td>9.</td>
+          <td>Kuosa Everts</td>
+        </tr>
+        <tr>
+            <td>10.</td>
+          <td>Macāns Ritvars</td>
+        </tr>
+        <tr>
+            <td>11.</td>
+          <td>Makavecka Melānija</td>
+        </tr>
+        <tr>
+            <td>12.</td>
+          <td>Margini Federico</td>
+        </tr>
+        <tr>
+            <td>13.</td>
+          <td>Maslova Monta</td>
+        </tr>
+        <tr>
+            <td>14.</td>
+          <td>Miltiņa Paula</td>
+        </tr>
+        <tr>
+            <td>15.</td>
+          <td>Rimša Jānis</td>
+        </tr>
+        <tr>
+            <td>16.</td>
+          <td>Romanovs Nikita</td>
+        </tr>
+        <tr>
+            <td>17.</td>
+          <td>Toloks Timurs</td>
+        </tr>
+        <tr>
+            <td>18.</td>
+          <td>Tumarevičs Konstantīns</td>
+        </tr>
+      </table>
 </body>
 </html>
+
