--- a/11klase.html
+++ b/11klase.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 class="virsraksts">11.a Klase</h1>
+    <div class="rectangle"></div>
     <body style="background-color:rgba(11,12,16,255);"></body>
     
     <table>
